2003-03-19  Ulrich Drepper  <drepper@redhat.com>

	* posix/tst-nice.c (do_test): Remove invalid of return value.
	Don't run test if initial level != 0.

2003-03-19  Amos Waterland  <apw@us.ibm.com>

	* posix/tst-nice.c: New file.
	* posix/Makefile (tests): Add tst-nice.

2003-03-18  Roland McGrath  <roland@redhat.com>

	* abilist: New directory of libfoo.abilist files maintained using
	scripts/merge-abilist.awk and "make update-abi" rules.
	* Makefile (distribute): Add abilist/*.abilist.
	* Makerules [$(build-shared) = yes] [$(subdir)] (tests):
	Depend on check-abi.

	* configure.in: Move $critic_missing check after all AC_CHECK_PROG_VER.
	* configure: Regenerated.

	* sysdeps/unix/sysv/linux/syscalls.list (posix_fadvise64): Fix name.

2003-03-18  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/sysconf.c (__sysconf): Handle _SC_MONOTONIC_CLOCK
	correctly.

2003-03-18  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/powerpc/powerpc64/memcpy.S: New file.

2003-03-18  Ulrich Drepper  <drepper@redhat.com>

	* Versions.def: Add GLIBC_2.3.3 for libpthread.

2003-03-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/libc-start.c [!SHARED &&
	!LIBC_START_MAIN_AUXVEC_ARG]: Compute beginning of auxvec correctly.

2003-03-17  Roland McGrath  <roland@redhat.com>

	* include/ctype.h: Revert last change.

2003-03-17  Ulrich Drepper  <drepper@redhat.com>

	* argp/tst-argp1.c: Use test-skeleton.c.
	* locale/tst-C-locale.c: Likewise.

2003-03-17  Alexandre Oliva  <aoliva@redhat.com>

	* sysdeps/mips/mips64/Implies: Move wordsize-64 to...
	* sysdeps/mips/mips64/n64/Implies: New file.
	* sysdeps/mips/mips64/n64/Makefile: New file.
	* sysdeps/mips/mips64/n64/el/bits/endian.h: New file.
	* sysdeps/mips/mips64/n32/Implies: New file.
	* sysdeps/mips/mips64/n32/Makefile: New file.
	* sysdeps/mips/mips64/n32/el/bits/endian.h: New file.
	* sysdeps/unix/mips/mips64/n32/sysdep.h: New file.
	* sysdeps/unix/mips/mips64/n64/sysdep.h: New file.